Tweaks to MilitarySupply dialogue wording'

--- a/scenarios/MilitarySupply/Locale/en/Scenario.cfg
+++ b/scenarios/MilitarySupply/Locale/en/Scenario.cfg
@@ -19,7 +19,7 @@ thoughts-news-5-goals=[color=0.08, 0.83, 0.82]The Imperial army has managed to t
 thoughts-hint-at-mission=[color=0.08, 0.83, 0.82]The Empress is preparing a secret mission for me to complete.  It should be ready soon.[/color]
 thoughts-news-15-goals1=[color=0.08, 0.83, 0.82]With the help of my supplies, the Imperial army has crippled the Seplurian armada.  My secret mission will be handed to me soon.[/color]
 thoughts-news-15-goals2=[color=0.08, 0.83, 0.82]The Empress plans to make one final push: strike deep into the heart of Seplurian territory and end the war![/color]
-thoughts-news-20-goals=[color=0.08, 0.83, 0.82]General K was killed by an assassin.  This will set us back months.  He was our best general.[/color]
+thoughts-news-20-goals=[color=0.08, 0.83, 0.82]I just heard news that General K was killed by an assassin.  He was our best general.  We'll make the enemy pay for this sin.[/color]
 thoughts-25-goals=[color=0.08, 0.83, 0.82]We've just won a decisive victory at the Korplean System.  The Seplurians have lost their largest fuel processing center.[/color]
 thoughts-receive-secret-mission1=[color=0.08, 0.83, 0.82]My secret mission is ready!  I need to build a super weapon and put it in the SUPPLY PICKUP CHEST.[/color]
 thoughts-receive-secret-mission2=[color=0.08, 0.83, 0.82]The ETERNITY RAY is designed to be the most powerful weapon in the universe.  Once it's built, we'll win for sure.[/color]
@@ -31,11 +31,11 @@ thoughts-follower-count-bonus=[color=0, 0.8, 0]Now I can have 15 defender robots
 thoughts-grenade-bonus-1=[color=0, 0.8, 0]These grenades have a momentum amplifier that will increase the force of the explosions.[/color]
 thoughts-grenade-bonus-2=[color=0, 0.8, 0]If I compress the coal in a certain way the explosion will do more damage.  The Empress will be pleased.[/color]
 thoughts-inserter-stack-bonus=[color=0, 0.8, 0]Each inserter can now move 3 items at once.  This should speed up my production a bit.[/color]
-thoughts-iron-sticks-gear=[color=0, 0.8, 0]50% savings when producing gear wheels--what's not to like?  If 100% savings too much to ask?  (It probably is...)[/color]
+thoughts-iron-sticks-gear=[color=0, 0.8, 0]50% savings when producing gear wheels--what's not to like?[/color]
 thoughts-mining-prod-bonus=[color=0, 0.8, 0]Now I just need 4% more furnaces, and 4% more assemblers, and 4% more belts, and 4% more inserters, and 4% more chests, and...[/color]
 thoughts-money-multiplier=[color=0, 0.8, 0]That was very expensive.  But now I get twice as much money, so hopefully I'll break even soon.[/color]
 thoughts-speed-health-bonus=[color=0, 0.8, 0]Wow!  These new DuraShoe+ SuperShoes really do help you run faster!  I must remember to write a good review.[/color]
-thoughts-pistol-obsolete=New technology has made the old pistol obsolete.  My superiors will no longer request shipments of pistols.
+thoughts-pistol-obsolete=New technology has made the old pistol obsolete.  My superiors will no longer order shipments of pistols.
 thoughts-unlock-bam-2=[color=0, 0.8, 0]I figured out how to build an assembling machine that will be much faster than anything I already have.[/color]
 thoughts-unlock-capsules=[color=0, 0.8, 0]These poison capsules are lethal to the natives of this planet--but also lethal to me.  I should be careful.[/color]
 thoughts-unlock-car=[color=0, 0.8, 0]It's an old-school car like they had in the 19th-22nd centuries.  It runs on 4 wheels instead of hovering.[/color]
@@ -51,7 +51,7 @@ thoughts-unlock-light-armor=[color=0, 0.8, 0]Iron armor.  It's not as strong as 
 thoughts-unlock-piercing-ammo=[color=0, 0.8, 0]This new ammunition should be strong enough to penetrate the Seplurian defenses.[/color]
 thoughts-unlock-red-belt=[color=0, 0.8, 0]The Empress will be glad to hear that I'm increasing the speed of my factory, won't she?[/color]
 thoughts-unlock-repair=[color=0, 0.8, 0]Now I can fix any damaged turrets or walls I may have.[/color]
-thoughts-unlock-smg=[color=0, 0.8, 0]These are much, much better than my old pistol.  They are standard-issue for Imperial soldiers.[/color]
+thoughts-unlock-smg=[color=0, 0.8, 0]These are much, much better than my old pistol.  They are standard-issue for Imperial soldiers. ... Why didn't they give one to me?[/color]
 thoughts-unlock-solar-panel=[color=0, 0.8, 0]Nearly unlimited free, clean solar energy...all I need is space.  Also I should probably clean them after every sandstorm.[/color]
 thoughts-unlock-steel-furnace=[color=0, 0.8, 0]They said I'm doing an okay job, but I need to work faster.  With these furnaces I can double my iron plate production.[/color]
 thoughts-unlock-sulfur1=[color=0, 0.8, 0]Sulfur is used to make items like batteries.  These definitely have military applications.[/color]
