Partway through coding GUI update

--- a/scenarios/MilitarySupply/Locale/en/Scenario.cfg
+++ b/scenarios/MilitarySupply/Locale/en/Scenario.cfg
@@ -2,8 +2,8 @@ scenario-name=MilitarySupply
 description=Complete goals to earn money; spend money to purchase technologies.\nThis scenario has a mini-story inside it, separate from the main game.\n[font=default-bold]Not tested with multiplayer.  Should work with multiplayer, but no guarantees.\nIf you try this scenario in multiplayer, please let the mod author know if it worked or not.[/font]
 
 [military-supply-scenario-thoughts]
-thoughts-initial1=My mission parameters are in the top-left corner of the screen.  I have a lot of work to do.
-thoughts-initial2=This planet is uninhabited and uncharted.  I will be one of the first to extract its resources.
+thoughts-initial1=My mission is to produce supplies for the ongoing war.  I have a lot of work to do.
+thoughts-initial2=This planet is uninhabited but rich with ore.  I will be one of the first to extract its resources.
 thoughts-initial3=They need me to produce military supplies.  I have some basic equipment to help me get started.
 thoughts-choose-starter-package=I can choose a Starter Package to help me set up my production line.  Each one has useful equipment.
 thoughts-initial4=These resources should be enough to get me started.  I know my orders.  It's time to begin.
@@ -59,10 +59,17 @@ thoughts-unlock-sulfur2=I can get the sufur I need from the SUPPLY DROPOFF CHEST
 thoughts-unlock-turret=[color=0, 0.8, 0]The Empress plans to mount these turrets on every warship in the fleet.[/color]
 thoughts-unlock-wall=[color=0, 0.8, 0]The natives of this planet might not be too happy about my presence.  I can proect my factory with walls.[/color]
 
+[military-supply-scenario-gui]
+title1=MilitarySupply scenario
+description1=Important things for the scenario can be found here.
+title2=First things first
+description2=A starter package will help you get started.  It's in the name.
+choose-starter-package=Choose a starter package.
+
 [military-supply-scenario-objective]
 player-objective-title=Objective
-player-objective-text1=Complete as many goals as possible.
-player-objective-text2=This is done by placing military items in the SUPPLY PICKUP CHEST.
+player-objective-text1=Choose a starter package.
+player-objective-text2=Complete as many goals as possible.\nThis is done by placing military items in the SUPPLY PICKUP CHEST.
 player-objective-text3=Build the ETERNITY RAY and place it in the SUPPLY PICKUP CHEST.
 
 [military-supply-scenario-score]
