--- a/scenarios/MilitarySupply/Locale/en/Scenario.cfg
+++ b/scenarios/MilitarySupply/Locale/en/Scenario.cfg
@@ -5,7 +5,7 @@ description=Complete goals to earn money; spend money to purchase technologies.\
 thoughts-initial1=My mission is to produce supplies for the ongoing war.  I have a lot of work to do.
 thoughts-initial2=This planet is uninhabited but rich with ore.  I will be one of the first to extract its resources.
 thoughts-initial3=They need me to produce military supplies.  I have some basic equipment to help me get started.
-thoughts-choose-starter-package=I can choose a Starter Package to help me set up my production line.  Each one has useful equipment.
+thoughts-choose-starter-package=I can choose a starter package to help me set up my production line.  Each one has useful items.
 thoughts-initial4=These resources should be enough to get me started.  I know my orders.  It's time to begin.
 thoughts-initial5=I have to remember my time limit.  I must finish producing supplies as quickly as I can.
 thoughts-find-shipwreck=What's that over there?    ...Is that a shipwreck?  Maybe there's something I can salvage...
@@ -15,8 +15,9 @@ thoughts-built-wall=These walls are similar in strength to the armor plating use
 thoughts-killed-spawner1=Yes!  I destroyed a biter town!  Take that!
 thoughts-killed-spawner2=Oh, and I also figured out a way to improve the current design of my turrets.  They will be 20% more powerful.
 thoughts-player-died=They used an emergency medical pod to revive me.  However, I've lost valuable time.
-thoughts-news-5-goals=[color=0.08, 0.83, 0.82]The Imperial army has managed to take back the planet of Indigo V.  They are fortifying the stronghold there.[/color]
 thoughts-hint-at-mission=[color=0.08, 0.83, 0.82]The Empress is preparing a secret mission for me to complete.  It should be ready soon.[/color]
+thoughts-pistol-obsolete=New technology has made the old pistol obsolete.  My superiors will no longer order shipments of pistols.
+thoughts-news-5-goals=[color=0.08, 0.83, 0.82]The Imperial army has managed to take back the planet of Indigo V.  They are fortifying the stronghold there.[/color]
 thoughts-news-15-goals1=[color=0.08, 0.83, 0.82]With the help of my supplies, the Imperial army has crippled the Seplurian armada.  My secret mission will be handed to me soon.[/color]
 thoughts-news-15-goals2=[color=0.08, 0.83, 0.82]The Empress plans to make one final push: strike deep into the heart of Seplurian territory and end the war![/color]
 thoughts-news-20-goals=[color=0.08, 0.83, 0.82]I just heard news that General K was killed by an assassin.  He was our best general.  We'll make the enemy pay for this sin.[/color]
@@ -35,7 +36,6 @@ thoughts-iron-sticks-gear=[color=0, 0.8, 0]50% savings when producing gear wheel
 thoughts-mining-prod-bonus=[color=0, 0.8, 0]Now I just need 4% more furnaces, and 4% more assemblers, and 4% more belts, and 4% more inserters, and 4% more chests, and...[/color]
 thoughts-money-multiplier=[color=0, 0.8, 0]That was very expensive.  But now I get twice as much money, so hopefully I'll break even soon.[/color]
 thoughts-speed-health-bonus=[color=0, 0.8, 0]Wow!  These new DuraShoe+ SuperShoes really do help you run faster!  I must remember to write a good review.[/color]
-thoughts-pistol-obsolete=New technology has made the old pistol obsolete.  My superiors will no longer order shipments of pistols.
 thoughts-unlock-bam-2=[color=0, 0.8, 0]I figured out how to build an assembling machine that will be much faster than anything I already have.[/color]
 thoughts-unlock-capsules=[color=0, 0.8, 0]These poison capsules are lethal to the natives of this planet--but also lethal to me.  I should be careful.[/color]
 thoughts-unlock-car=[color=0, 0.8, 0]It's an old-school car like they had in the 19th-22nd centuries.  It runs on 4 wheels instead of hovering.[/color]
@@ -45,7 +45,7 @@ thoughts-unlock-electricity-1=[color=0, 0.8, 0]Ahhh...nice to be back in the Ele
 thoughts-unlock-electricity-2=[color=0, 0.8, 0]Assembling machines, electric mining drills...what's this?  Instructions on how to build big electric poles and radars?  Thank you![/color]
 thoughts-unlock-fast-inserter=[color=0, 0.8, 0]Filter inserters!  Now I can build an advanced sorting depot.  If I need one.[/color]
 thoughts-unlock-grenade=[color=0, 0.8, 0]These grenades pack enough punch to rip holes in Seplurian steel.[/color]
-thoughts-unlock-heavy-armor=[color=0, 0.8, 0]This armor should become standard-issue for all Imperial soldiers.  And this toolbelt is great!  I love having more pockets.[/color]
+thoughts-unlock-heavy-armor=[color=0, 0.8, 0]They want this armor to become standard-issue for all Imperial soldiers, but it's quite expensive to craft.[/color]
 thoughts-unlock-laser-turret=[color=0, 0.8, 0]These are amazing!  I just wish they weren't such power hogs...[/color]
 thoughts-unlock-light-armor=[color=0, 0.8, 0]Iron armor.  It's not as strong as steel armor, but pretty effective if you ask me.[/color]
 thoughts-unlock-piercing-ammo=[color=0, 0.8, 0]This new ammunition should be strong enough to penetrate the Seplurian defenses.[/color]
@@ -58,25 +58,52 @@ thoughts-unlock-sulfur1=[color=0, 0.8, 0]Sulfur is used to make items like batte
 thoughts-unlock-sulfur2=I can get the sufur I need from the SUPPLY DROPOFF CHEST.
 thoughts-unlock-turret=[color=0, 0.8, 0]The Empress plans to mount these turrets on every warship in the fleet.[/color]
 thoughts-unlock-wall=[color=0, 0.8, 0]The natives of this planet might not be too happy about my presence.  I can proect my factory with walls.[/color]
+thoughts-choose-logistics=I'll take the logistics starter package.
+thoughts-choose-production=The production starter package sounds pretty good; that's the one I want.
+thoughts-choose-combat=I want the combat starter package.
 
 [military-supply-scenario-gui]
 title1=MilitarySupply scenario
 description1=Important things for the scenario can be found here.
 title2=First things first
 description2=A starter package will help you get started.  It's in the name.
-choose-starter-package=Choose a starter package.
-
-[military-supply-scenario-objective]
-player-objective-title=Objective
-player-objective-text1=Choose a starter package.
-player-objective-text2=Complete as many goals as possible.\nThis is done by placing military items in the SUPPLY PICKUP CHEST.
-player-objective-text3=Build the ETERNITY RAY and place it in the SUPPLY PICKUP CHEST.
+description-wait=Your objective will be ready shortly.
+choose-starter-package=Choose a starter package
+starter-package-logistics=Logistics starter package
+starter-package-production=Production starter package
+starter-package-combat=Combat starter package
+starter-package-preview-item-qty=__2__ __1__
+starter-package-crafting-bonus=50% faster manual crafting
+starter-package-armor=Modular armor (with equipment)
+starter-package-map-scan=Map scan
+main-objective=Complete as many goals as possible.\nThis is done by placing military items in the SUPPLY PICKUP CHEST.
+final-objective=Craft the ETERNITY RAY and place it in the SUPPLY PICKUP CHEST.
+time-remaining-title=Time remaining:
+time-remaining-value=__1__h __2__m __3__s
+deaths-info=Each player death adds a 1-hour penalty.
+deaths-counter-title=Player deaths:
+goals-counter-title=Goals completed:
+rewards-multiplier-title=Money from goals:
+rewards-multiplier-value=x__1__
+no-goals-left=No more goals.  You completed them all!
+goals-table-header-item-name=Item type
+goals-table-header-item-quantity=Quantity
+goals-table-header-reward-simple=Reward
+goals-table-header-reward-base=Base reward
+goals-table-header-reward-final=Actual reward
+goals-table-reward=$__1__
+money-gained=+$__1__
+show-goals-button=Show goals
+hide-goals-button=Hide goals
+show-shop-button=Show shop
+hide-shop-button=Hide shop
+show-score-button=Show score
+hide-score-button=Hide score
 
 [military-supply-scenario-score]
 final-score=Final score: __1__ points\nWrite this down somewhere (the game won't remember your score) and then try to beat it!
 description=Although your score doesn't affect the gameplay, it is a measure of how well you are doing.\nMissions completed, upgrades purchased, and finishing the game quickly will all positively affect your score.\nDying will dramatically reduce your score.
 current-score=Current score: __1__ points
-toggle-button=Toggle score
 pfg=Points from goals: __1__
 pfg-tooltip=Each is worth 10 points, up to a certain number.\nAfterwards, each is worth 50 points.
 pfg-tooltip-2=The first 30 are worth 10 points each.\nAfterwards, each is worth 50 points.
@@ -89,29 +116,15 @@ rt-tooltip=The 3 numbers on the left added together.
 dfd=Divisor from deaths: __1__
 dfd-tooltip=This number starts out at 1 and increases by 1 each time you die.\nThe raw total is divided by this number.
 sm=Score multiplier: __1__
-sm-tooltip=The score is multiplied by this number.\nIt is the same as the multiplier to goal rewards.
-
-[military-supply-scenario-goals-GUI]
-header1=ITEM TYPE
-header2=AMOUNT
-header3=REWARD
-money-value=$__1__
-money-value-with-bonus=$__1__ * __2__ = $__3__
-toggle-button=Toggle goals
-goal-count=Goals completed: __1__
-money-multiplier=Goal Reward Multiplier: *__1__
-time-left=Time left: __1__h __2__m __3__s
-no-goals-left=No more goals.  You've completed them all!
-deaths-warning=You lose 1 hour each time you die.\nDeaths: __1__
+sm-tooltip=The score is multiplied by this number.
 
 [military-supply-scenario-shop-GUI]
 money=Current balance: $__1__
-toggle-button=Toggle shop
 item-cost=$__1__
 tooltip-can-afford=Click to purchase this upgrade.
 tooltip-cannot-afford=You cannot afford this upgrade.
-upgrades-purchased=Upgrades Purchased: __1__
-no-upgrades-left=No more upgrades.  You've bought them all!
+upgrades-purchased-title=Upgrades purchased:
+no-upgrades-left=No more upgrades.  You bought them all!
 
 [military-supply-scenario-upgrades]
 smg=Submachne Gun
@@ -120,8 +133,8 @@ wall=Stone Wall
 advanced-oil-processing=Advanced Oil Processing\nOil Cracking
 bam-2=Burner Assembling Machine 2\nEngine Unit
 repair=Repair Pack
-light-armor=Light Armor\n+10 Inventory Slots
-heavy-armor=Heavy Armor\n+10 Inventory Slots
+light-armor=Light Armor
+heavy-armor=Heavy Armor
 turret=Gun Turret
 bullet-bonus-1=+15% Damage\n+10% Firerate
 bullet-bonus-2=+25% Damage\n+15% Firerate
@@ -143,24 +156,8 @@ solar-panel=Solar Panel\nAccumulator
 follower-count-bonus=+10 Follower Robots
 mining-prod-1=+4% Mining Productivity
 inserter-stack-bonus=+2 Inserter Stack Size
-money-bonus=*2 Goal Reward\n*2 Score
+money-bonus=x2 Goal Reward\nx2 Score
 iron-sticks-gear=Iron Sticks Gear
 better-cable-making=Better Cable Making
 laser-turret=Laser Turret
 sulfur=Sulfur Processing\nBatteries
-
-[military-supply-scenario-starter-bonus-GUI]
-gui-title=Choose a Starter Package
-package-logistics-name=Logistics Starter Package
-package-production-name=Production Starter Package
-package-combat-name=Combat Starter Package
-package-preview-item-qty=__2__ __1__
-package-production-preview-e2=50% Faster Manual Crafting
-package-combat-preview-e2=Map Scan
-gui-no=No
-gui-yes=Yes
-tooltip-no=Return to the previous menu to choose a different Starter Package.
-tooltip-yes=You will get all of the items or bonuses shown above.
-thoughts-choose-logistics=I'll take the Logistics Starter Package, please.
-thoughts-choose-production=The Production Starter Package sounds pretty good to me.  That's the one I want.
-thoughts-choose-combat=Can I have the Combat Sarter Package?  Thank you.
