Many tweaks to description text & dialogue

--- a/locale/en/Local.cfg
+++ b/locale/en/Local.cfg
@@ -14,7 +14,7 @@ military-supply-dropoff-chest=SUPPLY DROPOFF CHEST
 
 [entity-description]
 burner-assembling-machine-1=Crafts items that require up to 3 ingredients.
-burner-assembling-machine-2=Crafts items that require up to 2 solid ingredients.  Fluids do not count towards the limit.
+burner-assembling-machine-2=Crafts items that require up to 2 solid ingredients and 1 fluid ingredient.
 eco-assembling-machine=Does not create any pollution.
 eco-chemical-plant=Does not create any pollution.
 military-supply-pickup-chest=Place your finished products here to complete your goals.
