--- a/scenarios/MilitarySupply/Locale/en/Scenario.cfg
+++ b/scenarios/MilitarySupply/Locale/en/Scenario.cfg
@@ -1,43 +1,43 @@
 scenario-name=MilitarySupply
-description=Complete goals to earn money; spend money to purchase technologies.\nThis scenario has a mini-story inside it, separate from the main game.\n[font=default-bold]Not tested with multiplayer.  Should work with multiplayer, but no guarantees.\nIf you try this scenario in multiplayer, please let the mod author know if it worked or not.[/font]
+description=Complete goals to earn money; spend money to purchase technologies.\n[font=default-bold]Not tested with multiplayer.  Should work with multiplayer, but no guarantees.\nIf you try this scenario in multiplayer, please let the mod author know if it worked or not.[/font]
 
 [military-supply-scenario-thoughts]
 thoughts-initial1=My mission is to produce supplies for the ongoing war.  I have a lot of work to do.
 thoughts-initial2=This planet is uninhabited but rich with ore.  I will be one of the first to extract its resources.
-thoughts-initial3=They need me to produce military supplies.  I have some basic equipment to help me get started.
+thoughts-initial3=They need me to produce military supplies.  They gave me some basic equipment to get me started.
 thoughts-choose-starter-package=I can choose a starter package to help me set up my production line.  Each one has useful items.
-thoughts-initial4=These resources should be enough to get me started.  I know my orders.  It's time to begin.
-thoughts-initial5=I have to remember my time limit.  I must finish producing supplies as quickly as I can.
+thoughts-initial4=I have what I need.  I know my orders.  It's time to begin.
+thoughts-initial5=I must remember the time limit.  If time runs out, they'll make me janitorial staff on a warship.
 thoughts-find-shipwreck=What's that over there?    ...Is that a shipwreck?  Maybe there's something I can salvage...
-thoughts-killed-biters=When I said I was interested in meeting the local wildlife, I wasn't expecting this!
-thoughts-built-turret=I'll test these weapons on the natives of this planet to make sure they work nicely.
+thoughts-killed-biters=Huh, it looks like I'm not welcome here.  Business as usual for the empire, I guess.
+thoughts-built-turret=The empire does not tolerate setbacks, so I can't either.  I must defend my production line.
 thoughts-built-wall=These walls are similar in strength to the armor plating used in our warships.  If it can protect a warship, it'll protect this factory.
 thoughts-killed-spawner1=Yes!  I destroyed a biter town!  Take that!
-thoughts-killed-spawner2=Oh, and I also figured out a way to improve the current design of my turrets.  They will be 20% more powerful.
+thoughts-killed-spawner2=Oh, and I also figured out a way to improve the current design of my turrets.
 thoughts-player-died=They used an emergency medical pod to revive me.  However, I've lost valuable time.
 thoughts-hint-at-mission=[color=0.08, 0.83, 0.82]The Empress is preparing a secret mission for me to complete.  It should be ready soon.[/color]
 thoughts-pistol-obsolete=New technology has made the old pistol obsolete.  My superiors will no longer order shipments of pistols.
 thoughts-news-5-goals=[color=0.08, 0.83, 0.82]The Imperial army has managed to take back the planet of Indigo V.  They are fortifying the stronghold there.[/color]
 thoughts-news-15-goals1=[color=0.08, 0.83, 0.82]With the help of my supplies, the Imperial army has crippled the Seplurian armada.  My secret mission will be handed to me soon.[/color]
-thoughts-news-15-goals2=[color=0.08, 0.83, 0.82]The Empress plans to make one final push: strike deep into the heart of Seplurian territory and end the war![/color]
-thoughts-news-20-goals=[color=0.08, 0.83, 0.82]I just heard news that General K was killed by an assassin.  He was our best general.  We'll make the enemy pay for this sin.[/color]
-thoughts-25-goals=[color=0.08, 0.83, 0.82]We've just won a decisive victory at the Korplean System.  The Seplurians have lost their largest fuel processing center.[/color]
+thoughts-news-15-goals2=[color=0.08, 0.83, 0.82]The Empress plans to make one final push: strike deep into the heart of Seplurian territory and win the war![/color]
+thoughts-news-20-goals=[color=0.08, 0.83, 0.82]I just heard news that General K was killed by an assassin.  We'll make the enemy pay for this sin.[/color]
+thoughts-25-goals=[color=0.08, 0.83, 0.82]We've just won a decisive victory at the Korplean System.  We destroyed the Seplurians' main fuel processing center.[/color]
 thoughts-receive-secret-mission1=[color=0.08, 0.83, 0.82]My secret mission is ready!  I need to build a super weapon and put it in the SUPPLY PICKUP CHEST.[/color]
 thoughts-receive-secret-mission2=[color=0.08, 0.83, 0.82]The ETERNITY RAY is designed to be the most powerful weapon in the universe.  Once it's built, we'll win for sure.[/color]
 thoughts-better-cable-making=[color=0, 0.8, 0]This new advanced technology is interesting.  It should reduce my need for copper.[/color]
 thoughts-bullet-bonus-1=[color=0, 0.8, 0]I've engineered the latest batch of bullets to do more damage.  I feel like they could still be better though...[/color]
-thoughts-bullet-bonus-2=[color=0, 0.8, 0]If I harden the metal I can make these bullets do more damage.[/color]
+thoughts-bullet-bonus-2=[color=0, 0.8, 0]I changed the shape of the bullets slightly.  That should improve their performance.[/color]
 thoughts-bullet-bonus-3=[color=0, 0.8, 0]Aha!  If I can rework the gears of these guns they will reload faster.  This is as fast as I can get them to fire.[/color]
-thoughts-follower-count-bonus=[color=0, 0.8, 0]Now I can have 15 defender robots in the air at once.  Not bad, I suppose.[/color]
+thoughts-follower-count-bonus=[color=0, 0.8, 0]Now I can have 15 defender robots in the air at once.  That feels kind of...arbitrary?[/color]
 thoughts-grenade-bonus-1=[color=0, 0.8, 0]These grenades have a momentum amplifier that will increase the force of the explosions.[/color]
-thoughts-grenade-bonus-2=[color=0, 0.8, 0]If I compress the coal in a certain way the explosion will do more damage.  The Empress will be pleased.[/color]
-thoughts-inserter-stack-bonus=[color=0, 0.8, 0]Each inserter can now move 3 items at once.  This should speed up my production a bit.[/color]
+thoughts-grenade-bonus-2=[color=0, 0.8, 0]If I compress the coal in a certain way the explosion will do more damage.[/color]
+thoughts-inserter-stack-bonus=[color=0, 0.8, 0]Each inserter can now move 3 items at once.  This should keep things running smoothly.[/color]
 thoughts-iron-sticks-gear=[color=0, 0.8, 0]50% savings when producing gear wheels--what's not to like?[/color]
 thoughts-mining-prod-bonus=[color=0, 0.8, 0]Now I just need 4% more furnaces, and 4% more assemblers, and 4% more belts, and 4% more inserters, and 4% more chests, and...[/color]
 thoughts-money-multiplier=[color=0, 0.8, 0]That was very expensive.  But now I get twice as much money, so hopefully I'll break even soon.[/color]
 thoughts-speed-health-bonus=[color=0, 0.8, 0]Wow!  These new DuraShoe+ SuperShoes really do help you run faster!  I must remember to write a good review.[/color]
 thoughts-unlock-bam-2=[color=0, 0.8, 0]I figured out how to build an assembling machine that will be much faster than anything I already have.[/color]
-thoughts-unlock-capsules=[color=0, 0.8, 0]These poison capsules are lethal to the natives of this planet--but also lethal to me.  I should be careful.[/color]
+thoughts-unlock-capsules=[color=0, 0.8, 0]I heard these make some people really angry, something about morality?  ...  Okay, my boss just told me it's not important?  Why?[/color]
 thoughts-unlock-car=[color=0, 0.8, 0]It's an old-school car like they had in the 19th-22nd centuries.  It runs on 4 wheels instead of hovering.[/color]
 thoughts-unlock-circuit-network=[color=0, 0.8, 0]Now I can fine-tune my production to suit my needs.  With these combinators, I could do almost anything![/color]
 thoughts-unlock-concrete=[color=0, 0.8, 0]I can now build a nice concrete factory floor.  I can get the water I need from that lake in the starting area.[/color]
