Tweak capitalization & make some upgrade names more concise

--- a/scenarios/MilitarySupply/Locale/en/Scenario.cfg
+++ b/scenarios/MilitarySupply/Locale/en/Scenario.cfg
@@ -1,4 +1,4 @@
-scenario-name=MilitarySupply
+scenario-name=Military supply
 description=Complete goals to earn money; spend money to purchase technologies.\n[font=default-bold]Not tested with multiplayer.  Should work with multiplayer, but no guarantees.\nIf you try this scenario in multiplayer, please let the mod author know if it worked or not.[/font]
 
 [military-supply-scenario-thoughts]
@@ -59,7 +59,7 @@ thoughts-choose-production=The production starter package sounds pretty good; th
 thoughts-choose-combat=I want the combat starter package.
 
 [military-supply-scenario-gui]
-title1=MilitarySupply scenario
+title1=Military supply scenario
 description1=Important things for the scenario can be found here.
 title2=First things first
 description2=A starter package will help you get started.  It's in the name.
@@ -123,33 +123,32 @@ upgrades-purchased-title=Upgrades purchased:
 no-upgrades-left=No more upgrades.  You bought them all!
 
 [military-supply-scenario-upgrades]
-smg=Submachne Gun
-piercing-ammo=Piercing Rounds Magazine
-wall=Stone Wall
-advanced-oil-processing=Advanced Oil Processing\nOil Cracking
-bam-2=Burner Assembling Machine 2\nEngine Unit
-repair=Repair Pack
-heavy-armor=Heavy Armor
-turret=Gun Turret
-bullet-bonus-1=+15% Damage\n+10% Firerate
-bullet-bonus-2=+25% Damage\n+15% Firerate
-bullet-bonus-3=+35% Damage\n+25% Firerate
+smg=Submachne gun
+piercing-ammo=Piercing rounds magazine
+wall=Wall
+bam-2=Engine unit\nBurner assembling machine 2
+repair=Repair pack
+heavy-armor=Heavy armor
+turret=Gun turret
+bullet-bonus-1=+15% damage\n+10% firerate
+bullet-bonus-2=+25% damage\n+15% firerate
+bullet-bonus-3=+35% damage\n+25% firerate
 grenade=Grenade
 car=Car
-steel-furnace=Steel Furnace
-speed-health=+50% Running Speed\n+75 Max Health
-electricity-1=Steam Power\nElectric Inserter
-electricity-2=Assembling Machine 1\nElectric Mining Drill
-capsules=Poison Capsule\nDefender Capsule
-fast-belts=Fast Belts
-fast-inserter=Fast Inserter\nFilter Inserter
-grenade-bonus-1=+25% Damage
-grenade-bonus-2=+35% Damage
-concrete=Concrete\nHazard Concrete
-follower-count-bonus=+10 Follower Robots
-mining-prod-1=+4% Mining Productivity
-inserter-stack-bonus=+2 Inserter Stack Size
-money-bonus=x2 Goal Reward\nx2 Score
-iron-sticks-gear=Iron Sticks Gear
-better-cable-making=Better Cable Making
-sulfur=Sulfur Processing\nBatteries
+steel-furnace=Steel furnace
+speed-health=+50% running speed\n+75 max health
+electricity-1=Steam power\nElectric inserter
+electricity-2=Assembling machine 1\nElectric mining drill
+capsules=Poison capsule\nDefender capsule
+fast-belts=Fast transport belt
+fast-inserter=Fast inserter\nFilter inserter
+grenade-bonus-1=+25% damage
+grenade-bonus-2=+35% damage
+concrete=Concrete
+follower-count-bonus=+10 follower robots
+mining-prod-1=+4% mining productivity
+inserter-stack-bonus=+2 inserter stack size
+money-bonus=x2 goal reward\nx2 score
+iron-sticks-gear=Iron sticks gear
+better-cable-making=Better cable making
+sulfur=Sulfur processing
