Add new upgrade for mining productivity

--- a/scenarios/MilitarySupply/Locale/en/Scenario.cfg
+++ b/scenarios/MilitarySupply/Locale/en/Scenario.cfg
@@ -33,7 +33,8 @@ thoughts-grenade-bonus-1=[color=0, 0.8, 0]These grenades have a momentum amplifi
 thoughts-grenade-bonus-2=[color=0, 0.8, 0]If I compress the coal in a certain way the explosion will do more damage.[/color]
 thoughts-inserter-stack-bonus=[color=0, 0.8, 0]Each inserter can now move 3 items at once.  This should keep things running smoothly.[/color]
 thoughts-iron-sticks-gear=[color=0, 0.8, 0]50% savings when producing gear wheels--what's not to like?[/color]
-thoughts-mining-prod-bonus=[color=0, 0.8, 0]Now I just need 4% more furnaces, and 4% more assemblers, and 4% more belts, and 4% more inserters, and 4% more chests, and...[/color]
+thoughts-mining-prod-bonus-1=[color=0, 0.8, 0]Now I just need 4% more furnaces, and 4% more assemblers, and 4% more belts, and 4% more inserters, and 4% more chests, and...[/color]
+thoughts-mining-prod-bonus-2=[color=0, 0.8, 0]Another small, incremental improvement.[/color]
 thoughts-money-multiplier=[color=0, 0.8, 0]That was very expensive.  But now I get twice as much money, so hopefully I'll break even soon.[/color]
 thoughts-speed-health-bonus=[color=0, 0.8, 0]Wow!  These new DuraShoe+ SuperShoes really do help you run faster!  I must remember to write a good review.[/color]
 thoughts-unlock-bam-2=[color=0, 0.8, 0]I figured out how to build an assembling machine that will be much faster than anything I already have.[/color]
@@ -149,6 +150,7 @@ concrete=Concrete
 refined-concrete=Refined concrete
 follower-count-bonus=+10 follower robots
 mining-prod-1=+4% mining productivity
+mining-prod-2=+6% mining productivity
 inserter-stack-bonus=+2 inserter stack size
 money-bonus=x2 goal reward\nx2 score
 iron-sticks-gear=Iron sticks gear
