Put periods at the end of descriptions.

--- a/locale/en/Local.cfg
+++ b/locale/en/Local.cfg
@@ -51,11 +51,11 @@ burner-oil-processing=Burner oil processing
 automation-science-pack=Automation Science Pack
 
 [technology-description]
-air-filtering=Technology for higher tier burner devices
-burner-automation=Burner devices for automatic production of materials
-basic-fluid-handling=Foundation for more advanced technologies using fluids
-eco-automation=Technology for mass production without harming the environment
-electricity=Important technology for advanced production of every type
+air-filtering=Technology for higher tier burner devices.
+burner-automation=Burner devices for automatic production of materials.
+basic-fluid-handling=Foundation for more advanced technologies using fluids.
+eco-automation=Technology for mass production without harming the environment.
+electricity=Important technology for advanced production of every type.
 automation-science-pack=Allows research of all but the simplest of technologies.
 
 [recipe-name]
