Make the dialogue about each starter package more expressive

--- a/scenarios/MilitarySupply/Locale/en/Scenario.cfg
+++ b/scenarios/MilitarySupply/Locale/en/Scenario.cfg
@@ -56,9 +56,9 @@ thoughts-unlock-sulfur1=[color=0, 0.8, 0]Sulfur is used to make items like batte
 thoughts-unlock-sulfur2=I can get the sufur I need from the SUPPLY DROPOFF CHEST.
 thoughts-unlock-turret=[color=0, 0.8, 0]The Empress plans to mount these turrets on every warship in the fleet.[/color]
 thoughts-unlock-wall=[color=0, 0.8, 0]The natives of this planet might not be too happy about my presence.  I can proect my factory with walls.[/color]
-thoughts-choose-logistics=I'll take the logistics starter package.
-thoughts-choose-production=The production starter package sounds pretty good; that's the one I want.
-thoughts-choose-combat=I want the combat starter package.
+thoughts-choose-logistics=I'll take the logistics starter package.  I really need those transport belts.
+thoughts-choose-production=I want a starter package to give me a head-start on producing more resources.
+thoughts-choose-combat=Reports show this planet’s natives are a nuisance.  I'll need something to protect myself.
 
 [military-supply-scenario-gui]
 title1=Military supply scenario
