Show in the GUI if a starter package is a challenge or not

--- a/scenarios/MilitarySupply/Locale/en/Scenario.cfg
+++ b/scenarios/MilitarySupply/Locale/en/Scenario.cfg
@@ -72,6 +72,7 @@ starter-package-logistics=Logistics starter package
 starter-package-production=Production starter package
 starter-package-combat=Combat starter package
 starter-package-richness-challenge=Richness challenge
+starter-package-is-challenge=Choosing this starter package will make the scenario [color=1, 0, 0]much harder[/color] to complete.
 starter-package-item-qty=__2__ __1__
 starter-package-crafting-bonus=+__1__% faster manual crafting
 starter-package-armor=Modular armor (with equipment)
