Make new starter package: Builder\'s starter package

--- a/scenarios/MilitarySupply/Locale/en/Scenario.cfg
+++ b/scenarios/MilitarySupply/Locale/en/Scenario.cfg
@@ -59,6 +59,7 @@ thoughts-unlock-wall=[color=0, 0.8, 0]The natives of this planet might not be to
 thoughts-choose-logistics=I'll take the logistics starter package.  I really need those transport belts.
 thoughts-choose-production=I want a starter package to give me a head-start on producing more resources.
 thoughts-choose-combat=Reports show this planet’s natives are a nuisance.  I'll need something to protect myself.
+thoughts-choose-builder=I'd like a team of robotic assistants.
 thoughts-choose-richness-challenge=I don't serve the Empress because it is easy, I serve because I am needed.
 
 [military-supply-scenario-gui]
@@ -71,11 +72,16 @@ choose-starter-package=Choose a starter package
 starter-package-logistics=Logistics starter package
 starter-package-production=Production starter package
 starter-package-combat=Combat starter package
+starter-package-builder=Builder's starter package
 starter-package-richness-challenge=Richness challenge
 starter-package-is-challenge=Choosing this starter package will make the scenario [color=1, 0, 0]much harder[/color] to complete.
 starter-package-item-qty=__2__ __1__
-starter-package-crafting-bonus=+__1__% faster manual crafting
-starter-package-armor=Modular armor (with equipment)
+starter-package-crafting-bonus=+__1__% manual crafting speed
+starter-package-armor-with-shield=Modular armor (with shield)
+starter-package-armor-with-roboport=Modular armor (with roboport)
+starter-package-worker-robots-speed-modifier=+__1__% worker robot speed
+starter-package-manual-mining-speed-penalty=__1__% manual mining speed
+starter-package-ghost-rebuild-timeout=Ghost time to live: __1__ hours
 starter-package-force-map-chart=Map scan
 starter-package-money-multiplier=x__1__ goal reward
 starter-package-score-multiplier=x__1__ score
