Reword some bonuses

--- a/scenarios/MilitarySupply/Locale/en/Scenario.cfg
+++ b/scenarios/MilitarySupply/Locale/en/Scenario.cfg
@@ -79,9 +79,9 @@ starter-package-item-qty=__2__ __1__
 starter-package-crafting-bonus=+__1__% manual crafting speed
 starter-package-armor-with-shield=Modular armor (with shield)
 starter-package-armor-with-roboport=Modular armor (with roboport)
-starter-package-worker-robots-speed-modifier=+__1__% worker robot speed
+starter-package-worker-robots-speed-modifier=Worker robot speed: +__1__%
 starter-package-manual-mining-speed-penalty=__1__% manual mining speed
-starter-package-ghost-rebuild-timeout=Ghost time to live: __1__ hours
+starter-package-ghost-rebuild-timeout=Ghost rebuild timeout: +__1__h
 starter-package-force-map-chart=Map scan
 starter-package-money-multiplier=x__1__ goal reward
 starter-package-score-multiplier=x__1__ score
