Tweaks to Military Supply scenario

--- a/scenarios/MilitarySupply/Locale/en/Scenario.cfg
+++ b/scenarios/MilitarySupply/Locale/en/Scenario.cfg
@@ -1,5 +1,5 @@
 scenario-name=Military supply
-description=Complete goals to earn money; spend money to purchase technologies.\n[font=default-bold]Not tested with multiplayer.  Should work with multiplayer, but no guarantees.\nIf you try this scenario in multiplayer, please let the mod author know if it worked or not.[/font]
+description=Complete goals to earn money; spend money to purchase technologies.\nSupply the empire with resources to win the war.
 
 [military-supply-scenario-thoughts]
 thoughts-initial1=My mission is to produce supplies for the ongoing war.  I have a lot of work to do.
@@ -73,7 +73,7 @@ starter-package-logistics=Logistics starter package
 starter-package-production=Production starter package
 starter-package-combat=Combat starter package
 starter-package-builder=Builder's starter package
-starter-package-richness-challenge=Richness challenge
+starter-package-richness-challenge=Resource Richness Challenge
 starter-package-is-challenge=Choosing this starter package will make the scenario [color=1, 0, 0]much harder[/color] to complete.
 starter-package-item-qty=__2__ __1__
 starter-package-crafting-bonus=+__1__% manual crafting speed
